# market-intel-dashboard

./: .eslintrc.cjs  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prompt.md  tsconfig.base.json
apps/api/: .env.example  package.json  pyproject.toml
apps/api/app/: api.py  config.py  logging.py  models.py  state.py
apps/api/app/services/: analysis.py  causal_analyzer.py  correlation_engine.py  http_client.py  ingestion.py  pg_vector_store.py  scheduled_tasks.py  seed.py  simple_vector_store.py  task_queue.py  tech_heatmap.py  unlisted_tracker.py  vector_store.py
apps/api/app/sources/: earnings.py  edgar.py  fred.py  h10.py  hkex.py  hkma.py  hkma_catalog.json  hkma_catalog.py  hkma_discovery.py  hkma_endpoints.env  hkma_units.json  quotes.py  rss.py  treasury.py
apps/api/src/: index.ts
apps/api/src/mock/: data.ts
apps/api/tests/: test_analysis_service.py  test_analysis_task_queue.py  test_analysis_tasks_endpoint.py  test_asset_profile_endpoint.py  test_asset_quote_endpoint.py  test_assets_range.py  test_correlation.py  test_daily_news.py  test_events_endpoint.py  test_health_endpoint.py  test_hkma_catalog.py  test_hkma_discovery.py  test_hkma_source.py  test_ingestion_origin.py  test_model_and_report_api.py  test_pg_vector_store.py  test_qa_endpoint.py  test_quotes_pipeline_e2e.py  test_quotes_source.py  test_research_api.py  test_seed_service.py  test_seed_utils.py  test_timeline_lanes.py  test_unlisted_tracker.py  test_vector_store_backends.py
apps/api/tools/: hkma_discovery.py
apps/api/tools/pg/: backfill_vectors.py  healthcheck.py
(+68 files in other folders)
