[project]
name = "market-intel-api"
version = "0.1.0"
description = "Market intelligence API (free-source test edition)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.2",
  "uvicorn>=0.30.6",
  "httpx>=0.27.2",
  "feedparser>=6.0.11",
  "apscheduler>=3.10.4",
  "pydantic>=2.9.2",
]

[tool.uv]
package = false
